test/bad/break_outermost_scope.prg
// FAILS: break_outermost_scope.prg:3:1: `break' is not allowed here.

break; // Break not inside a loop is not allowed.